# gpuweb

./: .dockerignore  .gitignore  .pr-preview.json  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  action.yml  blame.txt  compatibility-mode.md  compile.sh  deploy.sh  deploy_key.enc  entrypoint.sh  index.html  index.pre.html  now.json  package.json  result.txt  results.txt  validate-idl.js  w3c.json  webgpu.idl  webgpu.idl.txt  wgsl.html  wgsl_expanded_summary.md  wgsl_summary.md
.cache/: w3.org!StyleSheets!TR!2016!W3C-WD  w3.org!StyleSheets!TR!2016!W3C-WD.headers  w3.org!StyleSheets!TR!2016!base.css  w3.org!StyleSheets!TR!2016!base.css.headers  w3.org!StyleSheets!TR!2016!logos!W3C  w3.org!StyleSheets!TR!2016!logos!W3C.headers  w3.org!StyleSheets!TR!2016!logos!WD  w3.org!StyleSheets!TR!2016!logos!WD.headers  w3.org!scripts!TR!2016!fixup.js  w3.org!scripts!TR!2016!fixup.js.headers
.devcontainer/: devcontainer.json
correspondence/: index.bs  index.html
design/: APICorrespondence.md  AdapterIdentifiers.md  AdapterInfoRegistry.md  BufferOperations.md  CommandSubmission.md  ErrorConventions.md  Limits.md  (+12 more)
wgsl/grammar/: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
wgsl/grammar/bindings/c/: tree-sitter-wgsl.pc.in
wgsl/grammar/bindings/go/: binding.go
wgsl/grammar/bindings/python/tree_sitter_wgsl/: __init__.py  binding.cpp
wgsl/grammar/bindings/rust/: build.rs
wgsl/grammar/src/: parser.cpp  scanner.c  scanner.cpp
(+310 files in other folders)
