[package]
name = "tree-sitter-wgsl"
description = "WGSL grammar for tree-sitter"
version = "0.0.7"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "wgsl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/gpuweb/tree-sitter-wgsl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = { version = "0.22" }

[build-dependencies]
cc = "1.0.87"
