[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-wgsl"
description = "WGSL grammar for tree-sitter"
version = "0.0.7"
keywords = ["incremental", "parsing", "tree-sitter", "wgsl"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: The 3-Clause BSD License (BSD-3-Clause)",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.9"
license.text = "BSD-3-Clause"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/gpuweb/tree-sitter-wgsl"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
